deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
spec:
  replicas: 2  # Minimum 2 pods for zero downtime
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0         # Ensure at least one pod is always running
      maxSurge: 1               # Allow one extra pod temporarily during updates
  selector:
    matchLabels:
      app: my-website
  template:
    metadata:
      labels:
        app: my-website
    spec:
      containers:
      - name: my-website
        image: arokyajp/arokya-cicd:latest
        ports:
        - containerPort: 8080
        readinessProbe:         # Ensure traffic is sent only to ready pods
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:          # Restart pod if unresponsive
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10


---

apiVersion: v1
kind: Service
metadata:
  name: my-website-service
spec:
  selector:
    app: my-website
  ports:
    - protocol: TCP
      port: 80           # Clients access the service on this port
      targetPort: 8080   # Internally redirects to containerPort
  type: NodePort         # Exposes service on a port on each Node
